Adicionado Documentação e rota de login
